# WickDownloaderSharp

./: .gitignore  build.ps1
native/: Cargo.toml
native/src/: lib.rs
platform/: Runtime.cs  WickDownloader.csproj  WickDownloaderSharp.sln
platform/DownloaderTest/: DownloaderTest.csproj  Program.cs
platform/DownloaderTest/Properties/: launchSettings.json
platform/WickDownloaderSharp/: Runtime.cs
