[package]
name = "wick-downloader-sharp"
version = "0.1.0"
authors = ["Waddlesworth <github@genj.io>"]
edition = "2018"

[lib]
name = "wick_downloader"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "0.2", features = ["full"] }
wickdl = { path = "D:\\GitHub\\WickDownloader" }
libc = "0.2"
lazy_static = "1.4"